...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter Title" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Company"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter Company Name" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="State"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter State" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter City" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cost of Living Index"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextCostOfLiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Cost of Living Index" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yearly Salary"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextYearlySalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Enter Yearly Salary" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yearly Bonus"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextYearlyBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Enter Yearly Bonus" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Training and Development Fund"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTrainingFund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Enter Training Fund Amount" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leave Time (days)"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextLeaveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Leave Time in Days" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telework Days per Week"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTeleworkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Telework Days per Week" />
        </LinearLayout>

        <!-- Add a button at the end of the LinearLayout -->
        <Button
            android:id="@+id/save_and_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Return" />
        <Button
            android:id="@+id/save_and_create_another_button"
            android:layout_width="match_parent"
...
