...

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:text="Job 1"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:text="Job 2"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>

                <!-- Title Row -->
                <TableRow>
...
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
            </TableLayout>
    <Button
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Return" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
